--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82053,6 +82053,7 @@ server=/vpimg1.com/114.114.114.114
 server=/vpimg2.com/114.114.114.114
 server=/vpimg3.com/114.114.114.114
 server=/vpimg4.com/114.114.114.114
+server=/vplay8.com/114.114.114.114
 server=/vplayer.net/114.114.114.114
 server=/vpmagic.com/114.114.114.114
 server=/vpn39.com/114.114.114.114
