--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82083,6 +82083,7 @@ server=/vpsvip.com/114.114.114.114
 server=/vpsvsvps.com/114.114.114.114
 server=/vpszh.com/114.114.114.114
 server=/vpszl.com/114.114.114.114
+server=/vq7736.com/114.114.114.114
 server=/vqaq.com/114.114.114.114
 server=/vqlai.com/114.114.114.114
 server=/vqlwoy.xyz/114.114.114.114
