--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82100,6 +82100,7 @@ server=/vrbeing.com/114.114.114.114
 server=/vrbi.viveport.com/114.114.114.114
 server=/vrbig.com/114.114.114.114
 server=/vrbrothers.com/114.114.114.114
+server=/vrbt.mobi/114.114.114.114
 server=/vrcfo.com/114.114.114.114
 server=/vrdiamondtools.com/114.114.114.114
 server=/vre.cc/114.114.114.114
