--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97865,6 +97865,7 @@ server=/zrj96.com/114.114.114.114
 server=/zrlyyy.com/114.114.114.114
 server=/zrmm.com/114.114.114.114
 server=/zrmsv7.com/114.114.114.114
+server=/zrmxswrl.com/114.114.114.114
 server=/zrnle2550.vip/114.114.114.114
 server=/zrpwxgp.com/114.114.114.114
 server=/zrtg.com/114.114.114.114
