--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98244,6 +98244,7 @@ server=/zuqiuba.net/114.114.114.114
 server=/zuqiuju.com/114.114.114.114
 server=/zusan.com/114.114.114.114
 server=/zushoushou.com/114.114.114.114
+server=/zuszw.com/114.114.114.114
 server=/zutianke.com/114.114.114.114
 server=/zuulee.com/114.114.114.114
 server=/zuwuzhuyi.com/114.114.114.114
