--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98391,6 +98391,7 @@ server=/zxpaa.xyz/114.114.114.114
 server=/zxpmq.com/114.114.114.114
 server=/zxqfjt.com/114.114.114.114
 server=/zxqg.com/114.114.114.114
+server=/zxrcfw.com/114.114.114.114
 server=/zxrtb.com/114.114.114.114
 server=/zxs-coffee.com/114.114.114.114
 server=/zxsauto.com/114.114.114.114
