--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98423,6 +98423,7 @@ server=/zxyee.com/114.114.114.114
 server=/zxz.ee/114.114.114.114
 server=/zxzhengxin.com/114.114.114.114
 server=/zxzhijia.com/114.114.114.114
+server=/zxziyuan.com/114.114.114.114
 server=/zxzmail.com/114.114.114.114
 server=/zxzt123.com/114.114.114.114
 server=/zxzyl.com/114.114.114.114
