--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98697,6 +98697,7 @@ server=/zzwljc.com/114.114.114.114
 server=/zzwqqx.com/114.114.114.114
 server=/zzwro.com/114.114.114.114
 server=/zzwtjx.com/114.114.114.114
+server=/zzxbn.com/114.114.114.114
 server=/zzxca.com/114.114.114.114
 server=/zzxcy.com/114.114.114.114
 server=/zzxdc.com/114.114.114.114
