--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1361,6 +1361,7 @@ server=/12gang.com/114.114.114.114
 server=/12h5.com/114.114.114.114
 server=/12jn.com/114.114.114.114
 server=/12ka.cc/114.114.114.114
+server=/12kanshu.com/114.114.114.114
 server=/12ketang.com/114.114.114.114
 server=/12ky.com/114.114.114.114
 server=/12miao.com/114.114.114.114
