--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4285,6 +4285,7 @@ server=/4399youxi.com/114.114.114.114
 server=/4399yyy.com/114.114.114.114
 server=/43cv.com/114.114.114.114
 server=/43ns.com/114.114.114.114
+server=/43xs.com/114.114.114.114
 server=/43zhubao.com/114.114.114.114
 server=/4417.com/114.114.114.114
 server=/442.com/114.114.114.114
