--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -4337,6 +4337,7 @@ server=/4694393.com/114.114.114.114
 server=/46cdn.vip/114.114.114.114
 server=/46design.com/114.114.114.114
 server=/46mlsv.com/114.114.114.114
+server=/46xs.com/114.114.114.114
 server=/47291.com/114.114.114.114
 server=/47295.com/114.114.114.114
 server=/4735.com/114.114.114.114
