--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5369,6 +5369,7 @@ server=/52fun.com/114.114.114.114
 server=/52fzwg.com/114.114.114.114
 server=/52gaoge.com/114.114.114.114
 server=/52gg.com/114.114.114.114
+server=/52ggd.com/114.114.114.114
 server=/52grz.com/114.114.114.114
 server=/52guixi.com/114.114.114.114
 server=/52guzhuang.com/114.114.114.114
