--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6655,6 +6655,7 @@ server=/699pic.com/114.114.114.114
 server=/69cy.net/114.114.114.114
 server=/69hr.com/114.114.114.114
 server=/69mok.com/114.114.114.114
+server=/69shu.org/114.114.114.114
 server=/69tianqi.com/114.114.114.114
 server=/69xiu.com/114.114.114.114
 server=/69yc.com/114.114.114.114
