--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -6939,6 +6939,7 @@ server=/74966.net/114.114.114.114
 server=/74977.net/114.114.114.114
 server=/74cms.com/114.114.114.114
 server=/74hao.com/114.114.114.114
+server=/74xsw.com/114.114.114.114
 server=/75.team/114.114.114.114
 server=/7508ss.cc/114.114.114.114
 server=/75111.net/114.114.114.114
