--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7161,6 +7161,7 @@ server=/7dah8.com/114.114.114.114
 server=/7didc.com/114.114.114.114
 server=/7down.com/114.114.114.114
 server=/7down.net/114.114.114.114
+server=/7dsw.com/114.114.114.114
 server=/7dtest.com/114.114.114.114
 server=/7east.com/114.114.114.114
 server=/7ed.net/114.114.114.114
