--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -7431,6 +7431,7 @@ server=/81xy.com/114.114.114.114
 server=/81xz.com/114.114.114.114
 server=/81zhongwenx.com/114.114.114.114
 server=/81zw.com/114.114.114.114
+server=/81zw.in/114.114.114.114
 server=/81zw.la/114.114.114.114
 server=/8203app.com/114.114.114.114
 server=/8211.com/114.114.114.114
