--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8239,6 +8239,7 @@ server=/92fox.com/114.114.114.114
 server=/92gyw.com/114.114.114.114
 server=/92hidc.net/114.114.114.114
 server=/92jzh.com/114.114.114.114
+server=/92k.cc/114.114.114.114
 server=/92kaifa.com/114.114.114.114
 server=/92kk.com/114.114.114.114
 server=/92ku.com/114.114.114.114
