--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -8689,6 +8689,7 @@ server=/999shengqian.com/114.114.114.114
 server=/999tea.com/114.114.114.114
 server=/999welder.com/114.114.114.114
 server=/999wx.com/114.114.114.114
+server=/999xs.com/114.114.114.114
 server=/999xx333kk.com/114.114.114.114
 server=/999xx999kk.com/114.114.114.114
 server=/999zz333zz.com/114.114.114.114
