--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9839,6 +9839,7 @@ server=/aibll.com/114.114.114.114
 server=/aibo123.com/114.114.114.114
 server=/aiboce.com/114.114.114.114
 server=/aiboco.com/114.114.114.114
+server=/aibookba.com/114.114.114.114
 server=/aibooks.cc/114.114.114.114
 server=/aibreeno.com/114.114.114.114
 server=/aibrm.com/114.114.114.114
