--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -12882,6 +12882,7 @@ server=/baishudata.com/114.114.114.114
 server=/baishuku.la/114.114.114.114
 server=/baishunet.com/114.114.114.114
 server=/baishuyun.com/114.114.114.114
+server=/baishuzhai.com/114.114.114.114
 server=/baisiterzh.com/114.114.114.114
 server=/baisiweiting.com/114.114.114.114
 server=/baisu.com/114.114.114.114
