--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14648,6 +14648,7 @@ server=/biqu.ge/114.114.114.114
 server=/biqu6.com/114.114.114.114
 server=/biqubao.com/114.114.114.114
 server=/biqubao10.com/114.114.114.114
+server=/biqubu.com/114.114.114.114
 server=/biqudu.com/114.114.114.114
 server=/biqudu.tv/114.114.114.114
 server=/biqufu.com/114.114.114.114
