--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14655,6 +14655,7 @@ server=/biqufu.com/114.114.114.114
 server=/biqugao.cc/114.114.114.114
 server=/biquge.info/114.114.114.114
 server=/biquge.la/114.114.114.114
+server=/biquge.vip/114.114.114.114
 server=/biquge365.com/114.114.114.114
 server=/biquge8.com/114.114.114.114
 server=/biquge9.cc/114.114.114.114
