--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14676,6 +14676,7 @@ server=/biqugexs.la/114.114.114.114
 server=/biqugexsapp.com/114.114.114.114
 server=/biqugexsw.com/114.114.114.114
 server=/biqugezw.us/114.114.114.114
+server=/biqugo.net/114.114.114.114
 server=/biqugu.cc/114.114.114.114
 server=/biqukai.com/114.114.114.114
 server=/biqukan.com/114.114.114.114
