--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15348,6 +15348,7 @@ server=/blm.net/114.114.114.114
 server=/blmpb.com/114.114.114.114
 server=/bln7.com/114.114.114.114
 server=/bln8.com/114.114.114.114
+server=/blnovel.com/114.114.114.114
 server=/blockchain.hk/114.114.114.114
 server=/blockchain123.com/114.114.114.114
 server=/blockchainlabs.org/114.114.114.114
