--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15896,6 +15896,7 @@ server=/bq04.com/114.114.114.114
 server=/bq233.com/114.114.114.114
 server=/bqatj.com/114.114.114.114
 server=/bqfy.com/114.114.114.114
+server=/bqg3.com/114.114.114.114
 server=/bqg8.cc/114.114.114.114
 server=/bqg8.la/114.114.114.114
 server=/bqg99.cc/114.114.114.114
