--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21195,6 +21195,7 @@ server=/cn51.com/114.114.114.114
 server=/cn5135.com/114.114.114.114
 server=/cn6szx.com/114.114.114.114
 server=/cn6x.com/114.114.114.114
+server=/cn8118.com/114.114.114.114
 server=/cn880.com/114.114.114.114
 server=/cn888.net/114.114.114.114
 server=/cn99.com/114.114.114.114
