--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22882,6 +22882,7 @@ server=/csfounder.com/114.114.114.114
 server=/csfreezer.com/114.114.114.114
 server=/csftyy.com/114.114.114.114
 server=/csfybjy.com/114.114.114.114
+server=/csg99.com/114.114.114.114
 server=/csgcyy.com/114.114.114.114
 server=/csgfjc.com/114.114.114.114
 server=/csgocn.net/114.114.114.114
