--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24337,6 +24337,7 @@ server=/daxuepc.com/114.114.114.114
 server=/daxueshi.com/114.114.114.114
 server=/daxuesoutijiang.com/114.114.114.114
 server=/daxuesushe.com/114.114.114.114
+server=/daxuetian.com/114.114.114.114
 server=/daxuewang.com/114.114.114.114
 server=/day66.com/114.114.114.114
 server=/dayaguqin.com/114.114.114.114
