--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25534,6 +25534,7 @@ server=/dingdiange.org/114.114.114.114
 server=/dingdiann.com/114.114.114.114
 server=/dingdiann.net/114.114.114.114
 server=/dingdiansk.com/114.114.114.114
+server=/dingdianxs.com/114.114.114.114
 server=/dingdianxs.la/114.114.114.114
 server=/dingdianzw.com/114.114.114.114
 server=/dingding.com/114.114.114.114
