--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25721,6 +25721,7 @@ server=/dizhonghaihotel.com/114.114.114.114
 server=/dizhu.org/114.114.114.114
 server=/dizhuche.com/114.114.114.114
 server=/diziguiwang.com/114.114.114.114
+server=/dizishu.com/114.114.114.114
 server=/dizzylab.net/114.114.114.114
 server=/dj.net/114.114.114.114
 server=/dj.tc/114.114.114.114
