--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26916,6 +26916,7 @@ server=/dtyzg.com/114.114.114.114
 server=/dtzj.com/114.114.114.114
 server=/du-xiaomai.com/114.114.114.114
 server=/du175.com/114.114.114.114
+server=/du1du.la/114.114.114.114
 server=/du7.com/114.114.114.114
 server=/du8.com/114.114.114.114
 server=/dualaid.com/114.114.114.114
