--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27076,6 +27076,7 @@ server=/duokaiwang.com/114.114.114.114
 server=/duokaiya.com/114.114.114.114
 server=/duokaiyun.com/114.114.114.114
 server=/duokan.com/114.114.114.114
+server=/duokan8.com/114.114.114.114
 server=/duokanbox.com/114.114.114.114
 server=/duoke.net/114.114.114.114
 server=/duokebao.net/114.114.114.114
