--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50834,6 +50834,7 @@ server=/keytoix.vip/114.114.114.114
 server=/keytui.com/114.114.114.114
 server=/keyu66.com/114.114.114.114
 server=/keyuejiazheng.com/114.114.114.114
+server=/keyueng.com/114.114.114.114
 server=/keyunchaxun.com/114.114.114.114
 server=/keyunidc.com/114.114.114.114
 server=/keyunsoft.com/114.114.114.114
