--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18770,6 +18770,7 @@ server=/chemsb.com/114.114.114.114
 server=/chemsrc.com/114.114.114.114
 server=/chemtour.com/114.114.114.114
 server=/chemwith.com/114.114.114.114
+server=/chemyouth.com/114.114.114.114
 server=/chemyq.com/114.114.114.114
 server=/chen-design.com/114.114.114.114
 server=/chen.fun/114.114.114.114
