--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44795,6 +44795,7 @@ server=/immomo.com/114.114.114.114
 server=/immomogame.com/114.114.114.114
 server=/immotors.com/114.114.114.114
 server=/immufeng.com/114.114.114.114
+server=/immune-path.com/114.114.114.114
 server=/immusician.com/114.114.114.114
 server=/imndl.icu/114.114.114.114
 server=/imnerd.org/114.114.114.114
