--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61993,6 +61993,7 @@ server=/nordfxs.com/114.114.114.114
 server=/nordicic.com/114.114.114.114
 server=/nordicways.com/114.114.114.114
 server=/nordikr.com/114.114.114.114
+server=/nordkete.com/114.114.114.114
 server=/nordritools.com/114.114.114.114
 server=/norinco-vehicle.com/114.114.114.114
 server=/norinco.com/114.114.114.114
