--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60217,6 +60217,7 @@ server=/nanningyuexing.com/114.114.114.114
 server=/nannjlnk.com/114.114.114.114
 server=/nano-zero.com/114.114.114.114
 server=/nanobody-biolab.com/114.114.114.114
+server=/nanochrom.com/114.114.114.114
 server=/nanoeast.net/114.114.114.114
 server=/nanoer.net/114.114.114.114
 server=/nanomxenes.com/114.114.114.114
