--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84442,6 +84442,7 @@ server=/winsui.com/114.114.114.114
 server=/wintalent.com/114.114.114.114
 server=/wintaosaas.com/114.114.114.114
 server=/winteam500.com/114.114.114.114
+server=/wintech-nano.com/114.114.114.114
 server=/winterchen.com/114.114.114.114
 server=/wintimechina.com/114.114.114.114
 server=/wintodoor.com/114.114.114.114
