--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73314,6 +73314,7 @@ server=/siphrd.com/114.114.114.114
 server=/sipingseo.com/114.114.114.114
 server=/sipo-sc.com/114.114.114.114
 server=/siposchina.com/114.114.114.114
+server=/sipprh.com/114.114.114.114
 server=/siqiangame.com/114.114.114.114
 server=/siqiquan.org/114.114.114.114
 server=/sique.com/114.114.114.114
