--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48821,6 +48821,7 @@ server=/jprtyun.com/114.114.114.114
 server=/jpsdk.com/114.114.114.114
 server=/jpshuntong.com/114.114.114.114
 server=/jpsmile.com/114.114.114.114
+server=/jpspecsz.com/114.114.114.114
 server=/jpsto.com/114.114.114.114
 server=/jptab.com/114.114.114.114
 server=/jpthome.com/114.114.114.114
