--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70898,6 +70898,7 @@ server=/semgz.com/114.114.114.114
 server=/semi.design/114.114.114.114
 server=/semidata.info/114.114.114.114
 server=/semiee.com/114.114.114.114
+server=/semight.com/114.114.114.114
 server=/semiinsights.com/114.114.114.114
 server=/semiway.com/114.114.114.114
 server=/sempk.com/114.114.114.114
