--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80636,6 +80636,7 @@ server=/ublese.com/114.114.114.114
 server=/ubmconlinereg.com/114.114.114.114
 server=/ubmsinoexpo.com/114.114.114.114
 server=/uboat100.com/114.114.114.114
+server=/uborn.net/114.114.114.114
 server=/uboxol.com/114.114.114.114
 server=/ubs001.com/114.114.114.114
 server=/ubssdic.com/114.114.114.114
