--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47882,6 +47882,7 @@ server=/jinju8.com/114.114.114.114
 server=/jinjunmei.net/114.114.114.114
 server=/jinkaijia.com/114.114.114.114
 server=/jinkan.org/114.114.114.114
+server=/jinkanghospital.com/114.114.114.114
 server=/jinke.com/114.114.114.114
 server=/jinkedatex.com/114.114.114.114
 server=/jinkejoy.com/114.114.114.114
