--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55568,6 +55568,7 @@ server=/lsyart.com/114.114.114.114
 server=/lsyhh.com/114.114.114.114
 server=/lszj.com/114.114.114.114
 server=/lszjyj.com/114.114.114.114
+server=/lsznk.com/114.114.114.114
 server=/lsznkyy.com/114.114.114.114
 server=/lszp.cc/114.114.114.114
 server=/lt-info.net/114.114.114.114
