--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -1090,6 +1090,7 @@ server=/114dg.com/114.114.114.114
 server=/114dns.com/114.114.114.114
 server=/114dns.net/114.114.114.114
 server=/114dnss.com/114.114.114.114
+server=/114gh.com/114.114.114.114
 server=/114god.com/114.114.114.114
 server=/114hyw.com/114.114.114.114
 server=/114hzw.com/114.114.114.114
