--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72203,6 +72203,7 @@ server=/shezaixian.com/114.114.114.114
 server=/shezfy.com/114.114.114.114
 server=/shfamily.com/114.114.114.114
 server=/shfangshui.com/114.114.114.114
+server=/shfayy.com/114.114.114.114
 server=/shfc365.com/114.114.114.114
 server=/shfcw.com/114.114.114.114
 server=/shfeikuang.com/114.114.114.114
