--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59476,6 +59476,7 @@ server=/mrutaste.com/114.114.114.114
 server=/mrvcdn.com/114.114.114.114
 server=/mrw.so/114.114.114.114
 server=/mrwish.net/114.114.114.114
+server=/mrxcys.com/114.114.114.114
 server=/mryshl.com/114.114.114.114
 server=/mryunwei.com/114.114.114.114
 server=/mryys.com/114.114.114.114
