--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71472,6 +71472,7 @@ server=/sh-service.com/114.114.114.114
 server=/sh-sfc.com/114.114.114.114
 server=/sh-shenming.com/114.114.114.114
 server=/sh-shenou.com/114.114.114.114
+server=/sh-shuguang.com/114.114.114.114
 server=/sh-srcb.com/114.114.114.114
 server=/sh-ssci.com/114.114.114.114
 server=/sh-tangfeng.com/114.114.114.114
