--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71915,6 +71915,7 @@ server=/shdcjt.com/114.114.114.114
 server=/shdirong.com/114.114.114.114
 server=/shdjt.com/114.114.114.114
 server=/shdmgs.com/114.114.114.114
+server=/shdmic.com/114.114.114.114
 server=/shdmt.net/114.114.114.114
 server=/shdpyq.com/114.114.114.114
 server=/shdrc.org/114.114.114.114
