--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94725,6 +94725,7 @@ server=/yx74.com/114.114.114.114
 server=/yx7507.com/114.114.114.114
 server=/yx988.com/114.114.114.114
 server=/yxacc6.com/114.114.114.114
+server=/yxbabe.com/114.114.114.114
 server=/yxbao.com/114.114.114.114
 server=/yxbhhbkj.com/114.114.114.114
 server=/yxbk.com/114.114.114.114
