--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28379,6 +28379,7 @@ server=/ehutu.com/114.114.114.114
 server=/ehuzhu.com/114.114.114.114
 server=/ehxyz.com/114.114.114.114
 server=/ei6nd.com/114.114.114.114
+server=/eia543.com/114.114.114.114
 server=/eiafans.com/114.114.114.114
 server=/eiccmall.com/114.114.114.114
 server=/eickaopei.com/114.114.114.114
