--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -90417,6 +90417,7 @@ server=/xysnews.com/114.114.114.114
 server=/xysstgs.com/114.114.114.114
 server=/xystatic.com/114.114.114.114
 server=/xystoy.com/114.114.114.114
+server=/xyswychgs.com/114.114.114.114
 server=/xysy.com/114.114.114.114
 server=/xysyzx.com/114.114.114.114
 server=/xyt-tech.com/114.114.114.114
