--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70140,6 +70140,7 @@ server=/sanlian-machine.com/114.114.114.114
 server=/sanligm.com/114.114.114.114
 server=/sanliu2021.com/114.114.114.114
 server=/sanliwenhua.com/114.114.114.114
+server=/sanlovalve.com/114.114.114.114
 server=/sanmanuela.com/114.114.114.114
 server=/sanmao.com/114.114.114.114
 server=/sanmiaocdn.com/114.114.114.114
