--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -9686,6 +9686,7 @@ server=/ahhaoze.com/114.114.114.114
 server=/ahhbxh.com/114.114.114.114
 server=/ahhdb.com/114.114.114.114
 server=/ahhhjx.com/114.114.114.114
+server=/ahhngsjt.com/114.114.114.114
 server=/ahhnsz.net/114.114.114.114
 server=/ahhouse.com/114.114.114.114
 server=/ahhtzx.com/114.114.114.114
