--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37594,6 +37594,7 @@ server=/gzjiunuo.com/114.114.114.114
 server=/gzjkqh.com/114.114.114.114
 server=/gzjpad.com/114.114.114.114
 server=/gzjqd.com/114.114.114.114
+server=/gzjsxh.com/114.114.114.114
 server=/gzjtjx.com/114.114.114.114
 server=/gzjtjy.com/114.114.114.114
 server=/gzjunyu.com/114.114.114.114
