--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49947,6 +49947,7 @@ server=/jxjob.net/114.114.114.114
 server=/jxjt666.com/114.114.114.114
 server=/jxjuwentech.com/114.114.114.114
 server=/jxjx6.com/114.114.114.114
+server=/jxjywater.com/114.114.114.114
 server=/jxjyzy.com/114.114.114.114
 server=/jxkjzb.com/114.114.114.114
 server=/jxkp.com/114.114.114.114
