--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42307,6 +42307,7 @@ server=/huayulandmarkhotel.com/114.114.114.114
 server=/huayun.com/114.114.114.114
 server=/huayunyy.com/114.114.114.114
 server=/huayuzj.com/114.114.114.114
+server=/huazhen-gs.com/114.114.114.114
 server=/huazhen2008.com/114.114.114.114
 server=/huazhen2008.net/114.114.114.114
 server=/huazhengcaiwu.com/114.114.114.114
