--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70205,6 +70205,7 @@ server=/sanyamotor.com/114.114.114.114
 server=/sanyanblockchain.com/114.114.114.114
 server=/sanyastar.com/114.114.114.114
 server=/sanyasx.com/114.114.114.114
+server=/sanyawater.com/114.114.114.114
 server=/sanyecao.com/114.114.114.114
 server=/sanyenet.com/114.114.114.114
 server=/sanyewu.com/114.114.114.114
