--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -74708,6 +74708,7 @@ server=/soushoubiao.com/114.114.114.114
 server=/sousou.com/114.114.114.114
 server=/sousou.pro/114.114.114.114
 server=/sousoudus.com/114.114.114.114
+server=/sousuotu.com/114.114.114.114
 server=/southbeauty.com/114.114.114.114
 server=/southbeautygroup.com/114.114.114.114
 server=/southcn.com/114.114.114.114
