--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55243,6 +55243,7 @@ server=/longyin.net/114.114.114.114
 server=/longyu.cc/114.114.114.114
 server=/longyucq.com/114.114.114.114
 server=/longyuedu.com/114.114.114.114
+server=/longyuegs.com/114.114.114.114
 server=/longyusheng.org/114.114.114.114
 server=/longyutec.com/114.114.114.114
 server=/longzhou.cc/114.114.114.114
