--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16805,6 +16805,7 @@ server=/cabletiegun.com/114.114.114.114
 server=/cabling-system.com/114.114.114.114
 server=/cablingteam.com/114.114.114.114
 server=/cabplink.com/114.114.114.114
+server=/cabr-fire.com/114.114.114.114
 server=/cacfo.com/114.114.114.114
 server=/cachaona.com/114.114.114.114
 server=/cache4ever.com/114.114.114.114
