--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32656,6 +32656,7 @@ server=/gdsday.com/114.114.114.114
 server=/gdsdays.com/114.114.114.114
 server=/gdsdwan.com/114.114.114.114
 server=/gdshcm.com/114.114.114.114
+server=/gdskfz.com/114.114.114.114
 server=/gdslwl.com/114.114.114.114
 server=/gdspeedtest.com/114.114.114.114
 server=/gdsports.net/114.114.114.114
