--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -37448,6 +37448,7 @@ server=/gystarch.com/114.114.114.114
 server=/gystatic.com/114.114.114.114
 server=/gystc.com/114.114.114.114
 server=/gysuces.com/114.114.114.114
+server=/gyswzys.com/114.114.114.114
 server=/gytcwb.com/114.114.114.114
 server=/gytsg.net/114.114.114.114
 server=/gyuancdn.com/114.114.114.114
