--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97968,6 +97968,7 @@ server=/zlbagx.com/114.114.114.114
 server=/zlbkj.com/114.114.114.114
 server=/zlca.org/114.114.114.114
 server=/zlcool.com/114.114.114.114
+server=/zldatas.com/114.114.114.114
 server=/zldq.org/114.114.114.114
 server=/zle.com/114.114.114.114
 server=/zleosearch.com/114.114.114.114
