--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77136,6 +77136,7 @@ server=/taiyocablecn.com/114.114.114.114
 server=/taiyou.fund/114.114.114.114
 server=/taiyuanguanye.com/114.114.114.114
 server=/taiyulink.com/114.114.114.114
+server=/taizhouwater.com/114.114.114.114
 server=/taizibao.com/114.114.114.114
 server=/tajd.net/114.114.114.114
 server=/tajdny.com/114.114.114.114
