--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84170,6 +84170,7 @@ server=/wenxuesk.info/114.114.114.114
 server=/wenxuesk.net/114.114.114.114
 server=/wenxuesk.org/114.114.114.114
 server=/wenxuetiandi.com/114.114.114.114
+server=/wenyaguan.com/114.114.114.114
 server=/wenyaqi.net/114.114.114.114
 server=/wenyijcc.com/114.114.114.114
 server=/wenyoutai.com/114.114.114.114
