--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47201,6 +47201,7 @@ server=/jianguoyun.com/114.114.114.114
 server=/jiangweishan.com/114.114.114.114
 server=/jiangxing.live/114.114.114.114
 server=/jiangxiol.com/114.114.114.114
+server=/jiangxiwater.com/114.114.114.114
 server=/jiangxueqiao.com/114.114.114.114
 server=/jiangyan.tv/114.114.114.114
 server=/jiangyoushang.com/114.114.114.114
