--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47286,6 +47286,7 @@ server=/jianweidata.com/114.114.114.114
 server=/jianweisn.com/114.114.114.114
 server=/jianweitv.com/114.114.114.114
 server=/jianwenapp.com/114.114.114.114
+server=/jianwulian.com/114.114.114.114
 server=/jianxi-materials.com/114.114.114.114
 server=/jianxinyun.com/114.114.114.114
 server=/jianxiyasi.com/114.114.114.114
