--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48633,6 +48633,7 @@ server=/jmeizs.com/114.114.114.114
 server=/jmgle.com/114.114.114.114
 server=/jmglg.com/114.114.114.114
 server=/jmgo.com/114.114.114.114
+server=/jmgsgs.com/114.114.114.114
 server=/jmhapp.com/114.114.114.114
 server=/jmhd8.com/114.114.114.114
 server=/jmhjt.com/114.114.114.114
