--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75243,6 +75243,7 @@ server=/stcmcudata.com/114.114.114.114
 server=/stcmih.com/114.114.114.114
 server=/stcn.com/114.114.114.114
 server=/stcy168.com/114.114.114.114
+server=/stcyzls.com/114.114.114.114
 server=/stdaily.com/114.114.114.114
 server=/stdard.com/114.114.114.114
 server=/stdicloud.com/114.114.114.114
