--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96533,6 +96533,7 @@ server=/zhihuinanzhan.com/114.114.114.114
 server=/zhihuishan.com/114.114.114.114
 server=/zhihuishitang.net/114.114.114.114
 server=/zhihuishu.com/114.114.114.114
+server=/zhihuiwater.com/114.114.114.114
 server=/zhihuixiadan.com/114.114.114.114
 server=/zhihuixl.com/114.114.114.114
 server=/zhihuixuexipt.com/114.114.114.114
