--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35119,6 +35119,7 @@ server=/guoshi.com/114.114.114.114
 server=/guoshusir.com/114.114.114.114
 server=/guosujt.com/114.114.114.114
 server=/guotailiangyou.com/114.114.114.114
+server=/guoturen.com/114.114.114.114
 server=/guotv.com/114.114.114.114
 server=/guowai.org/114.114.114.114
 server=/guowaidiaocha.com/114.114.114.114
