--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31232,6 +31232,7 @@ server=/foundgroup.net/114.114.114.114
 server=/founpad.com/114.114.114.114
 server=/fountask.com/114.114.114.114
 server=/four-faith.com/114.114.114.114
+server=/fourfaithwater.com/114.114.114.114
 server=/fovmy.com/114.114.114.114
 server=/fovtedt.com/114.114.114.114
 server=/fow.ink/114.114.114.114
