--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49305,6 +49305,7 @@ server=/jsqt.com/114.114.114.114
 server=/jsrc.com/114.114.114.114
 server=/jsrcu.com/114.114.114.114
 server=/jsrdgg.com/114.114.114.114
+server=/jsrdsw.com/114.114.114.114
 server=/jsrmzscl.com/114.114.114.114
 server=/jsrpebh.com/114.114.114.114
 server=/jsrrcb.com/114.114.114.114
