--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69765,6 +69765,7 @@ server=/runwanxin.com/114.114.114.114
 server=/runwise.co/114.114.114.114
 server=/runwith.cc/114.114.114.114
 server=/runxiongdianli.com/114.114.114.114
+server=/runxun.com/114.114.114.114
 server=/runzechuanmei.com/114.114.114.114
 server=/runzi.cc/114.114.114.114
 server=/ruochu.com/114.114.114.114
