--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77407,6 +77407,7 @@ server=/szscree.com/114.114.114.114
 server=/szsczb.com/114.114.114.114
 server=/szsczx.com/114.114.114.114
 server=/szsdjrmyy.com/114.114.114.114
+server=/szsdsrmyy.com/114.114.114.114
 server=/szseafoodexpo.com/114.114.114.114
 server=/szseasons.com/114.114.114.114
 server=/szsfgc.com/114.114.114.114
