--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49828,6 +49828,7 @@ server=/jt-it.com/114.114.114.114
 server=/jt120.com/114.114.114.114
 server=/jt56w.com/114.114.114.114
 server=/jt62.com/114.114.114.114
+server=/jt91.com/114.114.114.114
 server=/jtamc.com/114.114.114.114
 server=/jtbole.com/114.114.114.114
 server=/jtbtech.com/114.114.114.114
