--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -95240,6 +95240,7 @@ server=/yunshangnc.com/114.114.114.114
 server=/yunshangsuzhou.com/114.114.114.114
 server=/yunshangxuzhou.com/114.114.114.114
 server=/yunshanit.com/114.114.114.114
+server=/yunshanmedical.com/114.114.114.114
 server=/yunshanmeicai.com/114.114.114.114
 server=/yunsheng999.com/114.114.114.114
 server=/yunshi999.com/114.114.114.114
