--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13396,6 +13396,7 @@ server=/baufortune.com/114.114.114.114
 server=/bauschlombchina.com/114.114.114.114
 server=/bawagon.com/114.114.114.114
 server=/bawanglongbengye.com/114.114.114.114
+server=/bawjxt.net/114.114.114.114
 server=/bawu.net/114.114.114.114
 server=/baxiami.com/114.114.114.114
 server=/baxichina.com/114.114.114.114
