--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77182,6 +77182,7 @@ server=/szggzy.com/114.114.114.114
 server=/szghgw.com/114.114.114.114
 server=/szgky.com/114.114.114.114
 server=/szgla.com/114.114.114.114
+server=/szglby.com/114.114.114.114
 server=/szglsf.com/114.114.114.114
 server=/szgraphene.com/114.114.114.114
 server=/szguanai.com/114.114.114.114
