--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77437,6 +77437,7 @@ server=/szsjhts.com/114.114.114.114
 server=/szsjtjj.com/114.114.114.114
 server=/szsjxxpt.com/114.114.114.114
 server=/szsky.com/114.114.114.114
+server=/szslcyy.com/114.114.114.114
 server=/szslhssy.com/114.114.114.114
 server=/szsmk.com/114.114.114.114
 server=/szsmyg.com/114.114.114.114
