--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77588,6 +77588,7 @@ server=/szznzn.com/114.114.114.114
 server=/szzoan.com/114.114.114.114
 server=/szzs360.com/114.114.114.114
 server=/szzscq.com/114.114.114.114
+server=/szzsivf.com/114.114.114.114
 server=/szzunbao.com/114.114.114.114
 server=/szzuting.com/114.114.114.114
 server=/szzxks.net/114.114.114.114
