--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77219,6 +77219,7 @@ server=/szhomeimg.com/114.114.114.114
 server=/szhongshe.com/114.114.114.114
 server=/szhot.com/114.114.114.114
 server=/szhqyy.com/114.114.114.114
+server=/szhqyy120.com/114.114.114.114
 server=/szhrh.com/114.114.114.114
 server=/szhsx.net/114.114.114.114
 server=/szhsztdcgs.com/114.114.114.114
