--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57919,6 +57919,7 @@ server=/medlinker.net/114.114.114.114
 server=/medme.net/114.114.114.114
 server=/medmeeting.org/114.114.114.114
 server=/medproad.com/114.114.114.114
+server=/medrc.net/114.114.114.114
 server=/medreading.com/114.114.114.114
 server=/medscrm.com/114.114.114.114
 server=/medstarcorp.com/114.114.114.114
