--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98775,6 +98775,7 @@ server=/zkpk.org/114.114.114.114
 server=/zkrdlab.com/114.114.114.114
 server=/zkroom.com/114.114.114.114
 server=/zkscgj.com/114.114.114.114
+server=/zkshare.com/114.114.114.114
 server=/zksoftwaresz.com/114.114.114.114
 server=/zksssw.com/114.114.114.114
 server=/zksyzy.com/114.114.114.114
