--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21600,6 +21600,7 @@ server=/cnhenda.com/114.114.114.114
 server=/cnhhl.com/114.114.114.114
 server=/cnhiker.com/114.114.114.114
 server=/cnhis.cc/114.114.114.114
+server=/cnhis.com/114.114.114.114
 server=/cnhls.com/114.114.114.114
 server=/cnhlsxe.com/114.114.114.114
 server=/cnhm.net/114.114.114.114
